# MITRH_2023

./: package-lock.json  package.json
minting/: .gitignore  Anchor.toml  package.json
minting/programs/minting/: Cargo.toml
minting/programs/minting/src/: instructions.rs  lib.rs
minting/tests/: minting.ts
public/: Grass.glb  Terrain.glb  Tree.glb  WalkingArea.glb  environment_3.env  invisiblewalking_area.glb  smalltree.glb
public/materials/: PinkTransparentDiamond_Materials.json  nodeMaterial_blue_diamonds.json
public/particles/: soulOrb.json
public/textures/: invisPlane.json  scoreboard.json  screen_1.json  screen_2.json  screen_3.json
src/: App.js  index.js  main.scss  solana.js
src/components/: scoreboard.js  timeoutWidget.js  wallet.js
src/core/: SocketConnect.js  loadScene.js  setupBabylon.js
src/react/components/: Card.js  Card.scss
src/react/screens/: Home.js  Home.scss
src/scripts/: token.ts  token_old.ts
